fix: Divider top spacing should 0 inside settings-group

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -1132,6 +1132,10 @@ input[type="text"].select2-search__field {
   margin-top: 15px;
 }
 
+.customize-control-ast-settings-group .ast-field-settings-modal .customize-control-ast-divider .customizer-text {
+	margin-top: 0;
+}
+
 .customize-control-ast-settings-group .ast-field-settings-modal .customize-control-ast-divider .customize-control-title {
   font-weight: 500;
   letter-spacing: 1px;
