--- a/inc/customizer/custom-controls/assets/css/unminified/divider.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/divider.css
@@ -26,6 +26,10 @@
   margin-top: 15px;
 }
 
+.customize-control-ast-settings-group .ast-field-settings-modal .customize-control-ast-divider .customizer-text {
+	margin-top: 0;
+}
+
 .customize-control-ast-settings-group .ast-field-settings-modal .customize-control-ast-divider .customize-control-title {
   font-weight: 500;
   letter-spacing: 1px;
